# LangChain-learning

./: .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/: chains.py  lced_parallel.py  main.py  prompts.py  rag_flow.py  schema.py  utils.py  vectorstore.py
src/graph/: nodes.py  workflow.py
src/lcel/: lcel.py  lcel_parallel.py
src/share/: chains.py  docs_downloader.py  prompts.py  schema.py  utils.py  vectorstore.py
