[project]
name = "langchain_learning"
version = "0.1.0"
description = ""
authors = [
    {name = "masashi"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "gitpython (>=3.1.49,<4.0.0)",
    "pygithub (>=2.9.1,<3.0.0)",
    "langchain-cohere (>=0.5.1,<0.6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
