[project]
name = "langchain_learning"
version = "0.1.0"
description = ""
authors = [
    {name = "masashi"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-cohere (>=0.5.1,<0.6.0)",
    "chromadb (>=1.5.9,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "markdownify (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "share", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
